--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# RBSM files
+/src/elements/*/*.*DAT
+/src/elements/*/*/*.*DAT
+!/sample/*.*DAT
+/src/elements/*/*.txt
+!/sample/*.txt
+*.VIEW
+
+#vtk files
+/src/elements/*/*.vtu
+!/sample/*.vtu
